# omode

./: .gitignore  LICENCE.MD  README.md  pyproject.toml
.github/workflows/: wheels.yaml
src/omode/: __init__.py  symbolic.py
src/omode/backends/: casadi.py  cvxpy.py
src/optimo/: __init__.py  symbolic.py
src/optimo/backends/: casadi.py  cvxpy.py
src/test/: test_basics.py
