[build-system]
requires = ["setuptools"]               # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "optimo" # REQUIRED, is the only field that cannot be marked as dynamic.

version = "0.0.1" # REQUIRED, although can be dynamic

description = "Optimization modeling"

readme = "README.md"

requires-python = ">=3.9"

license = { file = "LICENCE.MD" }


authors = [{ name = "Mathijs Schuurmans", email = "info@optia.be" }]

maintainers = [{ name = "Mathijs Schuurmans", email = "info@optia.be" }]

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy"]

[project.optional-dependencies]
cvxpy = ["cvxpy"]
casadi = ["casadi"]
all = ["cvxpy", "casadi"]

[project.urls]
"Source" = "https://github.com/Mathijssch/omode"
"Bug Tracker" = "https://github.com/Mathijssch/omode/issues"
